--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,69 @@
-brotlipy==0.7.0
-certifi==2020.6.20
-cffi @ file:///tmp/build/80754af9/cffi_1605538068321/work
-chardet @ file:///tmp/build/80754af9/chardet_1605303185383/work
-conda==4.9.2
-conda-package-handling @ file:///tmp/build/80754af9/conda-package-handling_1603018141399/work
-cryptography @ file:///tmp/build/80754af9/cryptography_1605544487601/work
-idna @ file:///tmp/build/80754af9/idna_1593446292537/work
-numpy==1.20.1
-pycosat==0.6.3
+argon2-cffi @ file:///tmp/build/80754af9/argon2-cffi_1613037492802/work
+async-generator==1.10
+attrs @ file:///tmp/build/80754af9/attrs_1604765588209/work
+backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
+bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
+cached-property==1.5.2
+certifi==2020.12.5
+cffi @ file:///tmp/build/80754af9/cffi_1613246439577/work
+dataclasses==0.7
+decorator @ file:///home/ktietz/src/ci/decorator_1611930055503/work
+defusedxml @ file:///home/ktietz/src/ci_mi/defusedxml_1612808095953/work
+entrypoints==0.3
+future==0.18.2
+h5py==3.1.0
+importlib-metadata @ file:///tmp/build/80754af9/importlib-metadata_1602276842396/work
+ipykernel @ file:///tmp/build/80754af9/ipykernel_1596206602906/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///tmp/build/80754af9/ipython_1593447367857/work
+ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+ipywidgets @ file:///tmp/build/80754af9/ipywidgets_1610481889018/work
+jedi==0.17.0
+Jinja2 @ file:///tmp/build/80754af9/jinja2_1612213139570/work
+jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
+jupyter==1.0.0
+jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1601311786391/work
+jupyter-console @ file:///tmp/build/80754af9/jupyter_console_1598884538475/work
+jupyter-core @ file:///tmp/build/80754af9/jupyter_core_1612213308682/work
+jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+jupyterlab-widgets @ file:///tmp/build/80754af9/jupyterlab_widgets_1609884341231/work
+MarkupSafe==1.1.1
+mistune==0.8.4
+mkl-fft==1.2.0
+mkl-random==1.1.1
+mkl-service==2.3.0
+monai==0.4.0
+nbclient @ file:///tmp/build/80754af9/nbclient_1602783176460/work
+nbconvert @ file:///tmp/build/80754af9/nbconvert_1601914804165/work
+nbformat @ file:///tmp/build/80754af9/nbformat_1610738111109/work
+nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1606153767164/work
+notebook @ file:///tmp/build/80754af9/notebook_1611341009357/work
+numpy==1.19.2
+packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
+pandocfilters @ file:///tmp/build/80754af9/pandocfilters_1605120937332/work
+parso @ file:///tmp/build/80754af9/parso_1607623074025/work
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
+prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1606344362066/work
+prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
 pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-pyOpenSSL @ file:///tmp/build/80754af9/pyopenssl_1605545627475/work
-PySocks @ file:///tmp/build/80754af9/pysocks_1605305779399/work
-requests @ file:///tmp/build/80754af9/requests_1592841827918/work
-ruamel-yaml==0.15.87
-six @ file:///tmp/build/80754af9/six_1605205327372/work
-tqdm @ file:///tmp/build/80754af9/tqdm_1605303662894/work
-urllib3 @ file:///tmp/build/80754af9/urllib3_1603305693037/work
+Pygments @ file:///tmp/build/80754af9/pygments_1610565767015/work
+pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
+pyrsistent @ file:///tmp/build/80754af9/pyrsistent_1600141725711/work
+python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
+pyzmq==20.0.0
+qtconsole @ file:///tmp/build/80754af9/qtconsole_1612458529756/work
+QtPy==1.9.0
+scipy==1.5.4
+Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
+six @ file:///tmp/build/80754af9/six_1605205335545/work
+terminado==0.9.2
+testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
+torch==1.7.0
+tornado @ file:///tmp/build/80754af9/tornado_1606942266872/work
+traitlets==4.3.3
+typing-extensions @ file:///home/ktietz/src/ci_mi/typing_extensions_1612808209620/work
+wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+webencodings==0.5.1
+widgetsnbextension==3.5.1
+zipp @ file:///tmp/build/80754af9/zipp_1604001098328/work
